fixed background covering things

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,7 @@
 body {
     margin: 0px;
     overflow: hidden;
+    background-color: #bae7f9;
+    background-image: url('assets/images/background.png');
+    background-size: cover;
 }
